# P2Pal

./: .gitignore  .qmake.stash  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  P2Pal.pro  README.md  known-limitations.md  network-namespace-setup.md  readme.md  testing-procedure.md
release/: moc_gossip.cpp  moc_gui.cpp  moc_network.cpp  moc_p2pal.cpp  moc_peer.cpp
src/: gossip.cpp  gossip.h  gui.cpp  gui.h  main.cpp  message.cpp  message.h  network.cpp  network.h  network1.cpp  p2pal.cpp  p2pal.h  peer.cpp  peer.h
tests/: test_gossip.cpp  test_gui.cpp  test_message.cpp  test_network.cpp
